fix the text size and align

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -593,13 +593,17 @@ body, html {
 }
 
 .innovation-carousel-caption .innovation-carousel-title {
-  font-size: 24px;
-  color: #ffffff;
-  margin-bottom: 10px;
+  font-size: 54px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color: #575757;
+  margin-top: 40px;
+  margin-left: 90px;
 }
 
 .innovation-carousel-caption .innovation-carousel-description {
-  font-size: 16px;
+  font-size: 26px;
+  margin-left: 95px;
+  margin-top: 40px;
   color: #cccccc;
 }
 
